--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>취향을 잇는 거래, 번개장터</title>
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <div>
+      <div id="header">
+        <div id="header_wrap">
+          <div class="header_content">
+            <a class="download a_content">앱다운로드</a>
+            <button class="star btn_content">즐겨찾기</button>
+          </div>
+          <div class="header_content"></div>
+          <div class="header_content"></div>
+          <div class="header_content"></div>
+          <div class="header_content">
+            <button class="login btn_content">로그인/회원가입</button>
+            <a class="mystore a_content">내상점</a>
+          </div>
+        </div>
+      </div>
+      <div id="middle">
+        <div id="middle_wrap">
+          <div class="middle_content"></div>
+          <div class="middle_content"></div>
+        </div>
+      </div>
+      <div id="body"></div>
+    </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
