--- a/index.html
+++ b/index.html
@@ -104,7 +104,14 @@
           </div>
         </div>
       </div>
-      <div id="body"></div>
+      <div id="body">
+        <div class="body_first">
+          <div class="content"></div>
+        </div>
+        <div class="body_second">
+          <div class="content"></div>
+        </div>
+      </div>
     </div>
     <script type="text/javascript" src="./script.js"></script>
   </body>
