메인화면 이미지 추가

--- a/index.html
+++ b/index.html
@@ -113,14 +113,18 @@
       </div>
       <div id="body">
         <div class="body_first">
-          <div class="body_content1"></div>
+          <img
+            class="body_content1"
+            src="https://media.bunjang.co.kr/images/nocrop/844398082_w2058.jpg"
+          />
         </div>
         <div class="body_second">
-            <img
-              class="body_content2"
-              src="/pc-static/media/appdownload-banner.75b0fd5a.png"
-          </div>
+          <img
+            class="body_content2"
+            src="https://m.bunjang.co.kr/pc-static/media/appdownload-banner.75b0fd5a.png"
+          />
         </div>
+
         <section id="section">
           <h2>오늘의 상품 추천</h2>
           <div class="list">
