sticky 속성 설정, 이미지 리스트 추가

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
             class="body_content1"
             src="https://media.bunjang.co.kr/images/nocrop/844398082_w2058.jpg"
           />
+          <!-- <img
+            src="https://media.bunjang.co.kr/images/nocrop/842563258_w3048.jpg"
+          /> -->
         </div>
         <div class="body_second">
           <img
@@ -128,31 +131,131 @@
         <section id="section">
           <h2>오늘의 상품 추천</h2>
           <div class="list">
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
-            <div class="product"></div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/183206594_1_1654042021_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192204136_1_1656841430_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192606348_1_1657000593_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192032730_1_1657001067_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192494933_1_1656902976_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192528735_1_1656923440_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192612989_1_1657004685_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192613001_1_1657004693_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192608325_1_1657001861_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192542170_1_1656931413_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/189965341_1_1656995881_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192387924_1_1656924690_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/182637789_1_1654859146_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192607503_1_1657001347_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192483224_1_1656900852_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/188640971_1_1656643222_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/189246507_1_1655404040_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192612852_1_1657004588_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192180161_1_1656896633_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192182689_1_1656920620_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/184754220_1_1653658361_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/191430061_1_1657006824_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192557079_1_1656940449_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/192491307_1_1656896355_w292.jpg"
+              />
+            </div>
+            <div class="product">
+              <img
+                src="https://media.bunjang.co.kr/product/183206594_1_1654042021_w292.jpg"
+              />
+            </div>
           </div>
         </section>
       </div>
