--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div>
+    <div id="all">
       <div id="header">
         <div id="header_wrap">
           <div class="header_content">
